--- a/scss/1-Bases/_initial.scss
+++ b/scss/1-Bases/_initial.scss
@@ -23,6 +23,7 @@ main {
     z-index: 2;
     height: fit-content;
     background: linear-gradient(45deg, #eab92d 0%, #c79810 69%);
+    overflow: auto;
 }
 
 button {
@@ -32,7 +33,7 @@ button {
 form {
     text-align: center;
 
-    input {
+    input:not([type="checkbox"]) {
         width: 100%;
         height: 100%;
     }
