--- a/scss/2-Layouts/_footer.scss
+++ b/scss/2-Layouts/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-    clear: both;
     color: #f0c300;
     background-color: black;
     width: 100%;
