--- a/scss/3-Modules/_product.scss
+++ b/scss/3-Modules/_product.scss
@@ -8,4 +8,5 @@
 .product__image img {
     width: 100%;
     height: 100%;
+    background-color: transparent;
 }
